--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -10,6 +10,7 @@
 </head>
 <body>
     <header>
+        <img src="../../assets/Images/Logo.png"
         <h1>Musk's Hellscape</h1>
         <nav class="nav">
             <a class="link-item" href="/">Home</a>
