--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -2,7 +2,7 @@
     <div class="container">
         <div class="tv-show">
             <div class="card-header">
-                <h2>Sign Up!</h2>
+                <h2>Sign Up</h2>
             </div>
             <div class="card-body">
                 <label for="email-signup">Email:</label>
@@ -19,11 +19,11 @@
                 <br/>
                 <label for="avatar-image-signup">Select an Avatar Image:</label>
                 <div class="avatar-img-cont">
-                    <img style="width: 25%;" data-url="/Images/heart.png" src="/Images/heart.png" alt="image of heart"/>
-                    <img style="width: 25%;" data-url="/Images/aligator.png" src="/Images/aligator.png" alt="image of aligator"/>
-                    <img style="width: 25%;" data-url="/Images/butterfly.png" src="/Images/butterfly.png" alt="image of butterfly"/>
-                    <img style="width: 25%;" data-url="/Images/sun.png" src="/Images/sun.png" alt="image of sun"/>
-                    <img style="width: 25%;" data-url="/Images/real-heart.png" src="/Images/real-heart.png" alt="image of real heart"/>
+                    <img style="width: 25%;" data-url="../assets/Images/Bear.png" src="../assets/Images/Bear.png" alt="Bear cartoon"/>
+                    <img style="width: 25%;" data-url="../assets/Images/Dino.png" src="../assets/Images/Dino.png" alt="Dino cartoon"/>
+                    <img style="width: 25%;" data-url="../assets/Images/Elephan.png" src="../assets/Images/Elephan.png" alt="Elephant cartoon"/>
+                    <img style="width: 25%;" data-url="../assets/Images/Leo.png" src="../assets/Images/Leo.png" alt="Lion cartoon"/>
+                    <img style="width: 25%;" data-url="../assets/Images/Pengu.png" src="../assets/Images/Pengu.png" alt="Penguin cartoon"/>
                 </div>
                 <br/>
                 <button type="submit">Sign up</button>
