Added seeds and altered image location for access in live app.

--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -9,7 +9,7 @@
             <a id="delete-post"><i data-id={{post.id}} data-user={{post.user_id}} class="fa fa-trash"></i></a>
         </div>
         {{/each}}
-        <a class="new-post" id="new-post" href="/dashboard/post">+Post</a>
+        <a class="new-post" id="new-post" href="/dashboard/post">New Post</a>
     </div>
 </div>
 
