--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -1,17 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" crossorigin="anonymous" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
+        integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w=="
+        crossorigin="anonymous" />
     <link rel="stylesheet" href="/css/styles.css">
     <title>Musk's Hellscape</title>
 </head>
+
 <body>
     <header>
-        <img src="../../assets/Images/Logo.png"
-        <h1>Musk's Hellscape</h1>
+        <img id="Logo" src="Images/Logo.png" alt="logo">
+        <h1> Musk's Hellscape</h1>
         <nav class="nav">
             <a class="link-item" href="/">Home</a>
             <a class="link-item" href="/categories">Categories</a>
@@ -36,6 +40,7 @@
     <footer></footer>
     {{#if logged_in}}
     <script src="/js/logout.js"></script>
-     {{/if}}
+    {{/if}}
 </body>
+
 </html>
