--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -12,7 +12,7 @@
                 <input id="password" type="password"/>
                 <div class="my-post-cont">
                     <button id="login-btn" type="submit">Login</button>
-                    <a href="/signup">sign up</a>
+                    <a href="/signup">Sign up</a>
                 </div>
             </div>
         </div>
