--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -19,11 +19,11 @@
                 <br/>
                 <label for="avatar-image-signup">Select an Avatar Image:</label>
                 <div class="avatar-img-cont">
-                    <img style="width: 25%;" data-url="../assets/Images/Bear.png" src="../assets/Images/Bear.png" alt="Bear cartoon"/>
-                    <img style="width: 25%;" data-url="../assets/Images/Dino.png" src="../assets/Images/Dino.png" alt="Dino cartoon"/>
-                    <img style="width: 25%;" data-url="../assets/Images/Elephan.png" src="../assets/Images/Elephan.png" alt="Elephant cartoon"/>
-                    <img style="width: 25%;" data-url="../assets/Images/Leo.png" src="../assets/Images/Leo.png" alt="Lion cartoon"/>
-                    <img style="width: 25%;" data-url="../assets/Images/Pengu.png" src="../assets/Images/Pengu.png" alt="Penguin cartoon"/>
+                    <img style="width: 25%;" data-url="Images/Bear.png" src="Images/Bear.png" alt="Bear cartoon"/>
+                    <img style="width: 25%;" data-url="Images/Dino.png" src="Images/Dino.png" alt="Dino cartoon"/>
+                    <img style="width: 25%;" data-url="Images/Elephan.png" src="Images/Elephan.png" alt="Elephant cartoon"/>
+                    <img style="width: 25%;" data-url="Images/Leo.png" src="Images/Leo.png" alt="Lion cartoon"/>
+                    <img style="width: 25%;" data-url="Images/Pengu.png" src="Images/Pengu.png" alt="Penguin cartoon"/>
                 </div>
                 <br/>
                 <button type="submit">Sign up</button>
